cmake_minimum_required(VERSION 3.16)
file(GLOB SRCS "./src/*.cpp")
SET(LIBRARY_NAME lib-graph)
project(${LIBRARY_NAME})
add_library(${LIBRARY_NAME} SHARED ${SRCS})
message("LIB NAME: ${LIBRARY_NAME}")
if (CPU STREQUAL "M1")
    message("Configuring grid-pathfinding for M1 Mac.")
    target_compile_options(${LIBRARY_NAME} PUBLIC -O3 -Wall -mtune=native -mcpu=apple-m1)
else ()
    target_compile_options(${LIBRARY_NAME} PUBLIC -O3 -Wall -mtune=native -march=native)
endif ()
target_compile_features(${LIBRARY_NAME} PUBLIC cxx_std_17)
target_include_directories(${LIBRARY_NAME} INTERFACE ./include)

install(TARGETS ${LIBRARY_NAME} EXPORT ${LIBRARY_NAME}-config)